--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-slick": "^0.29.0",
     "react-twitter-embed": "^4.0.4",
     "sharp": "^0.32.0",
+    "slick-carousel": "^1.8.1",
     "spotlight.js": "^0.7.8",
     "yarn": "^1.22.19"
   },
