--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "global": "^4.4.0",
+    "material-icons": "^1.13.8",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
