--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.12.3",
     "aos": "^2.3.4",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "global": "^4.4.0",
