--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aos": "^2.3.4",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
+    "dompurify": "^3.0.8",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "global": "^4.4.0",
